--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
+:root {
+  --snakeHeadClr: orange;
+  --snakeBodyClr: #afafaf;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -19,6 +24,7 @@ body {
     background: black;
     position: relative;
     border: double white 10px;
+    overflow: hidden;
   }
   
   #snake {
@@ -26,19 +32,18 @@ body {
     
     width: 10px;
     height: 10px;
-    /* z-index: 10; */
-    background: rgb(255, 6, 193);
+    background: var(--snakeHeadClr);
 
   }
 
   .snakePart {
     position: absolute;
-    left: 109px;
-    top: -40px;
+    opacity: .6;
+    left: -10px;
+    top: -10px;
     width: 10px;
     height: 10px;
-    /* z-index: 10; */
-    background: red;
+    background: var(--snakeBodyClr);
 
   }
 
@@ -75,12 +80,18 @@ body {
     transition: 350ms ease;
   }
 
-  .start {
+  .gameOverScore {
+    color: rgb(169, 0, 0);
+    font-size: 120%;
+  }
+
+  .controls {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: .7rem;
     cursor: pointer;
+    text-align: center;
+    max-width: 90%;
   }
 
   small {
@@ -157,3 +168,34 @@ button:focus {
   }
 
   
+
+  @media (max-width: 750px) {
+    .instructions_modal {
+      padding: 2rem;
+      padding-top: 3rem;
+      font-size: 0.8rem;
+    }
+
+    .or {
+      margin: .6rem;
+    }
+
+    .top,
+    .bottom {
+      width: 35px;
+      height: 35px;
+    }
+
+    #closeModalBtn {
+      border: none;
+    }
+
+    h1 {
+      font-size: 1.75rem;
+    }
+
+    .board {
+      width: 350px;
+      height: 350px;
+    }
+  }
